force-app/main/default/objects/Bundle_Rule_Assignment__c/Bundle_Rule_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction object linking a Product Rule to a bundle product</description>
    <label>Bundle Rule Assignment</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Rule Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Rule Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>