force-app/main/default/objects/Bundle_Rule_Assignment__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The bundle product to which this rule applies.</inlineHelpText>
    <label>Bundle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Rule Assignments</relationshipLabel>
    <relationshipName>Bundle_Rule_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>