force-app/main/default/objects/Bundle_Rule_Assignment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked, this rule is not applied to this bundle.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>