force-app/main/default/objects/Bundle_Rule_Assignment__c/fields/Product_Rule__c.field-meta.xml
<CustomField>
    <fullName>Product_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The rule to assign to this bundle.</inlineHelpText>
    <label>Product Rule</label>
    <referenceTo>Product_Rule__c</referenceTo>
    <relationshipLabel>Bundle Rule Assignments</relationshipLabel>
    <relationshipName>Bundle_Rule_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>