force-app/main/default/objects/Bundle_Rule_Assignment__c/validationRules/Bundle_Rule_Assignment_Requires_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Bundle_Rule_Assignment_Requires_Product</fullName>
    <active>true</active>
    <description>Bundle Product is required.</description>
    <errorConditionFormula>ISBLANK(Bundle_Product__c)</errorConditionFormula>
    <errorMessage>Bundle Product is required. Please select a bundle product for this rule assignment.</errorMessage>
</ValidationRule>